<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/fill_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/fill_in_details"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/fill_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fill_text">

        <TextView
            android:id="@+id/p_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:text="@string/personal_information"
            android:textColor="#B2000000"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <LinearLayout
                android:id="@+id/fill_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/quesPage_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/name"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <AutoCompleteTextView
                    android:id="@+id/quesPage_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/email"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/quesPage_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textSize="14sp"
                    tools:targetApi="o" />

                <LinearLayout
                    android:id="@+id/dob_n_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/quesPage_DOB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/date_of_birth"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/quesPage_sex"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:background="#00FFFFFF"
                        android:backgroundTint="#ff000000"
                        android:backgroundTintMode="src_in"
                        android:entries="@array/sex_types"
                        android:prompt="@string/sex" />


                </LinearLayout>

                <Spinner
                    android:id="@+id/ques_services"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#ff000000"
                    android:backgroundTintMode="src_in"
                    android:entries="@array/services_types"
                   />

                <AutoCompleteTextView
                    android:id="@+id/quesPage_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:hint="@string/address"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/quesPage_adhaar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/adhaar_card_no"
                    android:inputType="number"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/quesPage_pan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:hint="@string/pan_card_number"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/fill_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_fill_button"
        android:fontFamily="@font/poppins"
        android:text="@string/next"
        android:textColor="#F8F6F6"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>