<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E1E1">

    <ImageView
        android:id="@+id/up_round"
        android:layout_width="624dp"
        android:layout_height="267dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/up_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/aileron"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/register_rect"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/register_image"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="-10dp"
                android:layout_marginBottom="30dp"
                android:background="#4FFFFFFF"
                android:contentDescription="@string/todo"
                android:visibility="visible"
                app:srcCompat="@drawable/sign_up" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical">

                    <AutoCompleteTextView
                        android:id="@+id/register_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autofillHints="@string/name"
                        android:hint="@string/name"
                        android:textSize="14sp" />

                    <AutoCompleteTextView
                        android:id="@+id/register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autofillHints="@string/email"
                        android:hint="@string/email"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/register_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autofillHints="@string/phone_number"
                        android:ems="10"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:onClick="ClearTextRegister"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:id="@+id/register_password_linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/m_password"
                            android:layout_width="230dp"
                            android:layout_height="wrap_content"
                            android:autofillHints="@string/password"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:onClick="ClearTextRegister"
                            android:textSize="14sp" />

                        <CheckBox
                            android:id="@+id/password_check"
                            android:layout_width="0dp"
                            android:layout_height="35dp"
                            android:layout_weight="1"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/register_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autofillHints="@string/password"
                        android:ems="10"
                        android:hint="@string/comfirm_password"
                        android:inputType="textPassword"
                        android:onClick="ClearTextRegister"
                        android:textSize="14sp" />

                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_rect"
                android:onClick="signUp"
                android:text="@string/register"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reg"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/poppins"
        android:text="@string/already_a_member_login_now"
        android:textColor="#D2000000"
        android:textColorLink="#EE141313"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:targetApi="lollipop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

</androidx.constraintlayout.widget.ConstraintLayout>